# math-docs

./: .gitignore  README.md
.github/workflows/: test.yml  welcome.yml
mathtools/: .gitignore  README.md  colab_demo.ipynb  pyproject.toml  requirements.txt
mathtools/.ipynb_checkpoints/: colab_demo-checkpoint.ipynb
mathtools/mathtools/: __init__.py  cli.py  data_utils.py  visualize.py
mathtools/mathtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
mathtools/tests/: test_calculator.py
