[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathtools"
version = "0.1.0"
description = "Simple calculator with CLI"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
mathcalc = "mathtools.cli:main"

[project.optional-dependencies]
test = ["pytest>=6.0"]
jupyter = ["jupyter>=1.0.0", "notebook>=6.0.0"]
