[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
mathcalc = "mathtools.cli:main"

[project]
name = "mathtools"
version = "0.2.0"
description = "Calculator with data science utilities"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0"
]

[project.optional-dependencies]
test = ["pytest>=6.0"]
jupyter = ["jupyter>=1.0.0", "notebook>=6.0.0"]
dev = ["pytest>=6.0", "jupyter>=1.0.0", "notebook>=6.0.0"]
